--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 title: Ananda Dhakal
 author:
-  name: GitHub User
-  email: dhakalananda13@gmail.com
-description: > # this means to ignore newlines until "show_excerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  #name: GitHub
+  #email: anandadhakal13@gmail.com
+  #description: > # this means to ignore newlines until "show_excerpts:"
+  Write an aweso
 
 show_excerpts: true # set to true to show excerpts on the homepage
 
@@ -16,14 +14,14 @@ minima:
 
   # generate social links in footer
   social_links:
-    twitter: jekyllrb
-    github: jekyll
+    twitter: dhakal_ananda
+    github: dhakalananda
     # devto: jekyll
     # dribbble: jekyll
     # facebook: jekyll
     # flickr:   jekyll
     # instagram: jekyll
-    # linkedin: jekyll
+    linkedin: ananda-dhakal-15171b18a
     # pinterest: jekyll
     # youtube: jekyll
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
@@ -57,5 +55,4 @@ minima:
 theme: minima
 
 plugins:
-  - jekyll-feed
   - jekyll-seo-tag
