--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ minima:
     # facebook: jekyll
     # flickr:   jekyll
     # instagram: jekyll
-    linkedin: ananda-dhakal-15171b18a
+    linkedin: ananda-dhakal
     # pinterest: jekyll
     # youtube: jekyll
     # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
